# GenAI-Powered-Legacy-Code-Analyzer

./: README.md  cli.py  pyproject.toml  report.md  requirements.txt
analyzer/: ast_parser.py  graph_builder.py  utils.py
llm/: openai_client.py  summarizer.py
report/: generator.py  template.html
