[tool.poetry]
name = "code-analyzer"
version = "0.1.0"
description = "AST-based code analyzer with LLM business logic summarization"
authors = ["Alex Gryshyn"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
networkx = "^3.2"
jinja2 = "^3.1"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
