[tool.poetry]
name = "code-analyzer"
version = "0.1.0"
description = "AST-based code analyzer with LLM business logic summarization"
authors = ["Alex Gryshyn"]
packages = [{ include = "analyzer" }, { include = "llm" }, { include = "report" }]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
networkx = "^3.2"
langchain-core = "^0.1.40"
langchain-openai = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
